<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/activity_1"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp">
            <Button
                android:id="@+id/bnToSecond"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginVertical="20dp"
                android:text="@string/btn_to_second"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>